--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
 html {
   font-size: 16px;
   scroll-behavior: smooth;
+  font-family: "poppins", sans-serif;
 }
 
 body {
@@ -34,18 +35,16 @@ header {
   display: flex;
   align-items: center;
   position: sticky;
+  top: 0;
   padding: 4px 10px;
   padding-right: 30px;
+  z-index: 10;
 }
 
 .logo {
   width: 90px;
   height: 90px;
   margin-right: auto;
-}
-
-.header-menu {
-  height: fit-content;
 }
 
 .menu-icons {
@@ -57,15 +56,11 @@ header {
 .close-header-menu-icon {
   font-size: 2.5rem;
   transform: translateY(-1.35rem);
-  transition: opacity 200ms ease-in-out, transform 250ms ease-out;
+  transition: opacity 250ms ease-in-out, transform 250ms ease-out;
 }
 
 .close-header-menu-icon {
   opacity: 0;
-}
-
-#toggle-header-menu {
-  display: none;
 }
 
 .header-menu:has(> #toggle-header-menu:checked) .menu-icons > * {
@@ -84,6 +79,10 @@ header {
   opacity: 1;
 }
 
+#toggle-header-menu {
+  display: none;
+}
+
 .header-menu-links {
   list-style: none;
   background-color: var(--color-secondary);
@@ -91,25 +90,25 @@ header {
   position: absolute;
   right: 10px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
-  transform: translateY(-20px);
-  opacity: 0;
-  transition: opacity 150ms ease-in-out, transform 150ms ease-in;
+  visibility: hidden;
+  transform: translateY(-2.5rem);
+  transition: transform 400ms ease-in-out, visibility 100ms 50ms ease-in-out;
 }
 
 #toggle-header-menu:checked + .header-menu-links {
-  opacity: 1;
+  visibility: visible;
   transform: translateY(0);
 }
 
 .header-menu-links > * {
-  transform: translateY(-2.5rem);
-  opacity: 0;
-  transition: transform 200ms 100ms ease-out, opacity 100ms 100ms ease-in-out;
+  transform: translateY(-1.5rem);
+  visibility: hidden;
+  transition: transform 200ms ease-in-out, visibility 100ms 50ms ease-in-out;
 }
 
 #toggle-header-menu:checked + .header-menu-links > * {
+  visibility: visible;
   transform: translateY(0);
-  opacity: 1;
 }
 
 .header-menu-links > *:not(:last-of-type) {
@@ -117,8 +116,162 @@ header {
 }
 
 .header-menu-link {
-  font-size: clamp(1.75rem, 3vw, 2.25rem);
+  font-size: clamp(1.5rem, 3.35vw, 2rem);
   font-weight: 800;
   color: var(--color-dark-2);
   text-decoration: none;
+}
+
+/*----------main content-----------*/
+main {
+  background-color: var(--color-secondary);
+  width: min(91vw, 1250px);
+  margin-inline: auto;
+}
+
+.about-me, #my-skills {
+  padding-inline: max(1rem, 5vw);
+  padding-block: max(1rem, 2.5vw);
+}
+
+.about-me {
+  position: relative;
+  margin-top: max(1.5rem, 3.5vw);
+}
+
+#my-skills {
+  margin-top: max(1.5rem, 2vw);
+  scroll-margin-top: 6rem;
+}
+
+.about-me::after {
+  content: "";
+  background-color: var(--color-primary);
+  height: 4px;
+  left: 1.5rem;
+  right: 1.5rem;
+  filter: blur(3px);
+  position: absolute;
+  bottom: -2svh;
+}
+
+.name,
+.skills-title {
+  color: var(--color-dark-2);
+  margin-bottom: 1.5rem;
+}
+
+.name {
+  font-size: clamp(2.25rem, 5vw, 3.25rem);
+}
+
+.skills-title {
+  font-size: clamp(1.75rem, 4.5vw, 2.75rem);
+  font-weight: 600;
+}
+
+.description,
+.skill-name {
+  color: var(--color-dark-1);
+  font-size: clamp(1.25rem, 2.75vw, 1.5rem);
+  text-align: justify;
+  line-height: 1.8;
+}
+
+.skill-name {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+}
+
+.description:first-of-type {
+  margin-bottom: 1.5rem;
+}
+
+.skills {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  column-gap: 7rem;
+  row-gap: 2.25rem;
+}
+
+.progress-bar-container {
+  border: 3px solid #000;
+  border-radius: 10px;
+  height: fit-content;
+  background-color: var(--color-dark-1);
+}
+
+.progress-bar-container > * {
+  height: 1.4rem;
+  background-color: var(--color-progress-bar);
+  border-radius: 10px;
+}
+
+.progress-bar-99 {
+  width: 99%;
+  animation: prog-bar-99-animation 5s linear infinite;
+}
+
+.progress-bar-95 {
+  width: 95%;
+  animation: prog-bar-95-animation 5s linear infinite;
+}
+
+.progress-bar-97 {
+  width: 97%;
+  animation: prog-bar-97-animation 5s linear infinite;
+}
+
+.progress-bar-30 {
+  width: 30%;
+  animation: prog-bar-30-animation 5s linear infinite;
+}
+
+.skill-percentage {
+  color: var(--color-light);
+  animation: show-skill-percentage-anim 5s linear infinite;
+}
+
+@keyframes prog-bar-99-animation {
+  0% {
+    width: 0%;
+  } 75% {
+    width: 99%;
+  }
+}
+
+@keyframes prog-bar-95-animation {
+  0% {
+    width: 0%;
+  } 75% {
+    width: 95%;
+  }
+}
+
+@keyframes prog-bar-97-animation {
+  0% {
+    width: 0%;
+  } 75% {
+    width: 97%;
+  }
+}
+
+@keyframes prog-bar-30-animation {
+  0% {
+    width: 0%;
+  } 75% {
+    width: 30%;
+  }
+}
+
+@keyframes show-skill-percentage-anim {
+  0% {
+    opacity: 0;
+  } 50% {
+    opacity: 0;
+  } 75% {
+    opacity: 1;
+  }
 }
