--- a/style.css
+++ b/style.css
@@ -195,10 +195,27 @@ main {
 }
 
 .skills {
+  --_ideal-size: 200px;
+  --_max-column-count: 3;
+  --_column-gap: 7rem;
+
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  column-gap: 7rem;
+  /*creates a grid with 3 columns max*/
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(
+      min(
+        max(
+          100% / var(--_max-column-count) - var(--_column-gap),
+          var(--_ideal-size)
+        ),
+        100%
+      ),
+      1fr
+    )
+  );
+  column-gap: var(--_column-gap);
   row-gap: 2.25rem;
 }
 
@@ -299,12 +316,10 @@ main {
 .banner > a,
 .banner-img {
   display: block;
-  width: 100%;
-  height: 100%;
 }
 
 .banner-img {
-  object-fit: cover;
+  width: 100%;
   border-radius: 25px;
   opacity: 0.45;
 }
